feat: added endpoint to remove performers from a file and added durationMs column to file_meta table and repair endpoint will update those without duration
